# mcp-mysql-server

./: .gitignore  README.md  mysql_server_launcher.py  pyproject.toml
mcp_mysql_server/: launcher.py
mysql_server/: __init__.py
