[project]
name = "mcps-mysql-server"
version = "0.1.5"
description = "MySQL server implementation for MCP (Model Control Protocol) framework"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Shubham Rampurkar", email = "rampurkarshubham91@gmail.com" }
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "mysql-connector-python>=9.3.0",
]

[project.scripts]
mcps-mysql-server = "mcp_mysql_server.launcher:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
